# HW1-FAST-AQ-Parser

./: DESCRIPTION.txt  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
seqparser/: seq.py
tests/: bad.fq  bad2.fa  bad3.fa  test_parsers.py  test_transcribe.py
