[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "seqparser"
authors = [{name = "Isobel Beasley", email = "isobel.beasley@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest"
#	"io",
#	"sys"
#	"typing" 
]

[tool.flit.metadata]
module = "seqparser"
description-file = "DESCRIPTION.txt" 

[project.urls]
# Home = "https://github.com/BMI203-2024/HW1-FAST-AQ-Parser.git"
Home = "https://github.com/IJbeasley/HW1-FAST-AQ-Parser"